--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "svg-sprite-loader": "^6.0.11",
     "vue-particles": "^1.0.9",
     "vue-template-compiler": "^2.7.16"
+    "webpack": "^5.88.2"
   },
   "resolutions": {
     "@achrinza/node-ipc": "https://github.com/youshandefeiyang/node-ipc.git#main"
