--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "sass-loader": "^13.3.3",
     "svg-sprite-loader": "^6.0.11",
     "vue-particles": "^1.0.9",
-    "vue-template-compiler": "^2.7.16"
+    "vue-template-compiler": "^2.7.16",
     "webpack": "^5.88.2"
   },
   "resolutions": {
